[gd_scene load_steps=6 format=2]

[ext_resource path="res://Attacks/DramaAttacks/GraphicsAttack/drama_attack5.gd" type="Script" id=1]
[ext_resource path="res://Attacks/DramaAttacks/GraphicsAttack/graphic.png" type="Texture" id=2]
[ext_resource path="res://player/KinematicHeart.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 280, 100, 0, 0, 0, 0, 535, 100 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 300, 85, 0, 0, 0, 0, 505, 85, 0, 0, 0, 0, 585, 85 )
}

[node name="DramaAttack5" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 520, 300 )

[node name="GraphicAttackTimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="UpperPointSpawn" type="Path2D" parent="."]
position = Vector2( -10, 50 )
curve = SubResource( 1 )

[node name="UpperPointLocation" type="PathFollow2D" parent="UpperPointSpawn"]
position = Vector2( 280, 100 )

[node name="LowerPointSpawn" type="Path2D" parent="."]
position = Vector2( 0, 330 )
curve = SubResource( 3 )

[node name="LowerPointLocation" type="PathFollow2D" parent="LowerPointSpawn"]
position = Vector2( 300, 85 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 300.0
margin_top = 155.0
margin_right = 556.0
margin_bottom = 411.0
texture = ExtResource( 2 )

[node name="KinematicHeart" parent="." instance=ExtResource( 3 )]
position = Vector2( 435, 270 )

[connection signal="timeout" from="GraphicAttackTimer" to="." method="_on_GraphicAttackTimer_timeout"]
